# cpp_learn_modules

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_8txt.html  README.md  README_8md.html  annotated.html  dir_eebf3f225e2b2730948d3e09940bd8fb.html  dir_f6dfe5494c17f71a0cfdad6340d632b6.html  files.html  functions_vars.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.map  inherit_graph_3.md5  inherits.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  md_README.html  menudata.js  namespacemembers.html  namespacemembers_func.html  namespaceprint__lib.html  pages.html  print__lib_8h.html  print__lib_8h__dep__incl.map  print__lib_8h__dep__incl.md5  print__lib_8h__incl.map  print__lib_8h__incl.md5  print__lib_8h_source.html  structutility_1_1is__container.html  structutility_1_1is__container_3_01std_1_1list_3_01T_00_01Alloc_01_4_01_4.html  structutility_1_1is__container_3_01std_1_1list_3_01T_00_01Alloc_01_4_01_4__coll__graph.map  structutility_1_1is__container_3_01std_1_1list_3_01T_00_01Alloc_01_4_01_4__coll__graph.md5  structutility_1_1is__container_3_01std_1_1vector_3_01T_00_01Alloc_01_4_01_4.html  (+26 more)
.github/workflow/: release.yml
.github/workflows/: cmake-single-platform.yml  docs.yml  release.yml
mod_1/: index.md
mod_1/hw_1/: CMakeLists.txt  README.md  lib.cpp  lib.h  main.cpp  test_version.cpp  version.h.in
mod_1/hw_2/: CMakeLists.txt  README.md  ip_filter.cpp  ip_filter.h  test_ip_filter.cpp  user_types.h  utility.h
mod_1/hw_3/: CMakeLists.txt  README.md  dynamic_allocator.h  dynamic_list_allocator.h  linked_list.h  main.cpp  map_allocator.cpp  static_allocator.cpp  static_allocator.h  utility.h
mod_1/hw_3/doc/: valgrind_rep.txt
mod_1/hw_4/: CMakeLists.txt  Doxyfile  README.md  main.cpp  print_lib.h  utility.h
mod_1/hw_4/doc/: Doxyfile
mod_1/hw_4/doc/html/: CMakeLists_8txt.html  README_8md.html  classes.html  files.html  functions.html  globals.html  globals_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.dot  inherit_graph_1.dot  inherit_graph_2.dot  inherit_graph_3.dot  inherits.html  main_8cpp.html  main_8cpp__incl.dot  md_README.html  namespacemembers_vars.html  namespaces.html  namespaceutility.html  pages.html  print__lib_8h.html  print__lib_8h__dep__incl.dot  print__lib_8h__incl.dot  print__lib_8h_source.html  structutility_1_1is__container.html  structutility_1_1is__container_3_01std_1_1list_3_01T_00_01Alloc_01_4_01_4.html  structutility_1_1is__container_3_01std_1_1list_3_01T_00_01Alloc_01_4_01_4__inherit__graph.dot  structutility_1_1is__container_3_01std_1_1vector_3_01T_00_01Alloc_01_4_01_4.html  structutility_1_1is__container_3_01std_1_1vector_3_01T_00_01Alloc_01_4_01_4__coll__graph.dot  structutility_1_1is__container__inherit__graph.dot  structutility_1_1is__cpp__string.html  structutility_1_1is__cpp__string_3_01std_1_1basic__string_3_01T_00_01Traits_00_01Alloc_01_4_01_4.html  structutility_1_1is__cpp__string_3_01std_1_1basic__string_3_01T_00_01Traits_00_01Alloc_01_4_01_4__inherit__graph.dot  structutility_1_1is__cpp__string__inherit__graph.dot  structutility_1_1is__tuple.html  structutility_1_1is__tuple_3_01std_1_1tuple_3_01T_8_8_8_01_4_01_4.html  structutility_1_1is__tuple_3_01std_1_1tuple_3_01T_8_8_8_01_4_01_4__coll__graph.dot  structutility_1_1is__tuple__coll__graph.dot  (+9 more)
mod_1/hw_4/doc/latex/: CMakeLists_8txt.tex  annotated.tex  files.tex  hierarchy.tex  main_8cpp.tex  main_8cpp.tex.tmp  main_8cpp__incl.dot  namespaceprint__lib.tex  namespaces.tex  namespaceutility.tex  print__lib_8h.tex  print__lib_8h__dep__incl.dot  print__lib_8h__incl.dot  refman.tex  structutility_1_1is__container.tex  structutility_1_1is__container_3_01std_1_1list_3_01T_00_01Alloc_01_4_01_4.tex  structutility_1_1is__container_3_01std_1_1list_3_01T_00_01Alloc_01_4_01_4__coll__graph.dot  structutility_1_1is__container_3_01std_1_1vector_3_01T_00_01Alloc_01_4_01_4.tex  utility_8h.tex  (+15 more)
search/: all_0.js  all_2.js  all_9.js  files_2.js  functions_1.js  functions_4.js  pages_0.js  searchdata.js
(+14 files in other folders)
